--- a/pages/contact.html
+++ b/pages/contact.html
@@ -345,12 +345,12 @@
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-                                            <a href="https://github.com/UmiNoKaibutsu" target="_blank"><i aria-hidden="true" class="fa-brands fa-github"></i></a></span>
+                                            <a href="https://github.com/Huuwa" target="_blank"><i aria-hidden="true" class="fa-brands fa-github"></i></a></span>
                                         <span class="elementor-icon-list-text"></span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-                                            <a href="https://twitter.com/itsHurohu" target="_blank"><i aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
+                                            <a href="https://twitter.com/imHuwa" target="_blank"><i aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
                                         <span class="elementor-icon-list-text"></span>
                                     </li>
                                     <li class="elementor-icon-list-item">
@@ -467,12 +467,12 @@
                                                     </li>
                                                     <li class="elementor-icon-list-item">
                                                         <span class="elementor-icon-list-icon">
-                                                            <a href="https://github.com/UmiNoKaibutsu" target="_blank"><i aria-hidden="true" class="fa-brands fa-github"></i></a></span>
+                                                            <a href="https://github.com/Huuwa" target="_blank"><i aria-hidden="true" class="fa-brands fa-github"></i></a></span>
                                                         <span class="elementor-icon-list-text"></span>
                                                     </li>
                                                     <li class="elementor-icon-list-item">
                                                         <span class="elementor-icon-list-icon">
-                                                            <a href="https://twitter.com/itsHurohu" target="_blank"><i aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
+                                                            <a href="https://twitter.com/imHuwa" target="_blank"><i aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
                                                         <span class="elementor-icon-list-text"></span>
                                                     </li>
                                                     <li class="elementor-icon-list-item">
