--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-                                            <a href="https://github.com/UmiNoKaibutsu" target="_blank"><i
+                                            <a href="https://github.com/huuwa" target="_blank"><i
                                                     aria-hidden="true" class="fa-brands fa-github"></i></a></span>
                                         <span class="elementor-icon-list-text"></span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-                                            <a href="https://twitter.com/itsHurohu" target="_blank"><i
+                                            <a href="https://twitter.com/imHuwa" target="_blank"><i
                                                     aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
                                         <span class="elementor-icon-list-text"></span>
                                     </li>
@@ -474,7 +474,7 @@
                                 <p class="card-excerpt">User can use to enter a movie review. response will positive or
                                     negative
                                 </p>
-                                <a href="https://github.com/UmiNoKaibutsu/Deploying-a-Sentiment-Analysis-Model"
+                                <a href="https://github.com/Huuwa/Deploying-a-Sentiment-Analysis-Model"
                                     target="_blank"> <img src="./images/githubbigicon.svg" width="50px" height="50px">
                                 </a>
                             </div>
@@ -903,13 +903,13 @@
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-                                            <a href="https://github.com/UmiNoKaibutsu" target="_blank"><i
+                                            <a href="https://github.com/huuwa" target="_blank"><i
                                                     aria-hidden="true" class="fa-brands fa-github"></i></a></span>
                                         <span class="elementor-icon-list-text"></span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-                                            <a href="https://twitter.com/itsHurohu" target="_blank"><i
+                                            <a href="https://twitter.com/imHuwa" target="_blank"><i
                                                     aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
                                         <span class="elementor-icon-list-text"></span>
                                     </li>
@@ -1032,14 +1032,14 @@
                                                     </li>
                                                     <li class="elementor-icon-list-item">
                                                         <span class="elementor-icon-list-icon">
-                                                            <a href="https://github.com/UmiNoKaibutsu"
+                                                            <a href="https://github.com/huuwa"
                                                                 target="_blank"><i aria-hidden="true"
                                                                     class="fa-brands fa-github"></i></a></span>
                                                         <span class="elementor-icon-list-text"></span>
                                                     </li>
                                                     <li class="elementor-icon-list-item">
                                                         <span class="elementor-icon-list-icon">
-                                                            <a href="https://twitter.com/itsHurohu" target="_blank"><i
+                                                            <a href="https://twitter.com/imHuwa" target="_blank"><i
                                                                     aria-hidden="true"
                                                                     class="fa-brands fa-twitter"></i></a></span>
                                                         <span class="elementor-icon-list-text"></span>
