--- a/pages/about.html
+++ b/pages/about.html
@@ -253,12 +253,12 @@
                                                     </li>
                                                     <li class="elementor-icon-list-item">
                                                         <span class="elementor-icon-list-icon">
-                                                            <a href="https://github.com/UmiNoKaibutsu" target="_blank"><i aria-hidden="true" class="fa-brands fa-github"></i></a></span>
+                                                            <a href="https://github.com/Huuwa" target="_blank"><i aria-hidden="true" class="fa-brands fa-github"></i></a></span>
                                                         <span class="elementor-icon-list-text"></span>
                                                     </li>
                                                     <li class="elementor-icon-list-item">
                                                         <span class="elementor-icon-list-icon">
-                                                            <a href="https://twitter.com/itsHurohu" target="_blank"><i aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
+                                                            <a href="https://twitter.com/imHuwa" target="_blank"><i aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
                                                         <span class="elementor-icon-list-text"></span>
                                                     </li>
                                                     <li class="elementor-icon-list-item">
@@ -817,12 +817,12 @@
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-                                            <a href="https://github.com/UmiNoKaibutsu" target="_blank"><i aria-hidden="true" class="fa-brands fa-github"></i></a></span>
+                                            <a href="https://github.com/Huuwa" target="_blank"><i aria-hidden="true" class="fa-brands fa-github"></i></a></span>
                                         <span class="elementor-icon-list-text"></span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-                                            <a href="https://twitter.com/itsHurohu" target="_blank"><i aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
+                                            <a href="https://twitter.com/imHuwa" target="_blank"><i aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
                                         <span class="elementor-icon-list-text"></span>
                                     </li>
                                     <li class="elementor-icon-list-item">
@@ -939,12 +939,12 @@
                                                     </li>
                                                     <li class="elementor-icon-list-item">
                                                         <span class="elementor-icon-list-icon">
-                                                            <a href="https://github.com/UmiNoKaibutsu" target="_blank"><i aria-hidden="true" class="fa-brands fa-github"></i></a></span>
+                                                            <a href="https://github.com/Huuwa" target="_blank"><i aria-hidden="true" class="fa-brands fa-github"></i></a></span>
                                                         <span class="elementor-icon-list-text"></span>
                                                     </li>
                                                     <li class="elementor-icon-list-item">
                                                         <span class="elementor-icon-list-icon">
-                                                            <a href="https://twitter.com/itsHurohu" target="_blank"><i aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
+                                                            <a href="https://twitter.com/imHuwa" target="_blank"><i aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
                                                         <span class="elementor-icon-list-text"></span>
                                                     </li>
                                                     <li class="elementor-icon-list-item">
