--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -416,13 +416,13 @@
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-                                            <a href="https://github.com/UmiNoKaibutsu" target="_blank"><i
+                                            <a href="https://github.com/Huuwa" target="_blank"><i
                                                     aria-hidden="true" class="fa-brands fa-github"></i></a></span>
                                         <span class="elementor-icon-list-text"></span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-                                            <a href="https://twitter.com/itsHurohu" target="_blank"><i
+                                            <a href="https://twitter.com/imHuwa" target="_blank"><i
                                                     aria-hidden="true" class="fa-brands fa-twitter"></i></a></span>
                                         <span class="elementor-icon-list-text"></span>
                                     </li>
@@ -545,14 +545,14 @@
                                                     </li>
                                                     <li class="elementor-icon-list-item">
                                                         <span class="elementor-icon-list-icon">
-                                                            <a href="https://github.com/UmiNoKaibutsu"
+                                                            <a href="https://github.com/Huuwa"
                                                                 target="_blank"><i aria-hidden="true"
                                                                     class="fa-brands fa-github"></i></a></span>
                                                         <span class="elementor-icon-list-text"></span>
                                                     </li>
                                                     <li class="elementor-icon-list-item">
                                                         <span class="elementor-icon-list-icon">
-                                                            <a href="https://twitter.com/itsHurohu" target="_blank"><i
+                                                            <a href="https://twitter.com/imHuwa" target="_blank"><i
                                                                     aria-hidden="true"
                                                                     class="fa-brands fa-twitter"></i></a></span>
                                                         <span class="elementor-icon-list-text"></span>
