--- a/index.html
+++ b/index.html
@@ -311,8 +311,7 @@
                                             data-id="167cd0d2" data-element_type="widget"
                                             data-widget_type="text-editor.default">
                                             <div class="elementor-widget-container">
-                                                <p>I'm a software developer, machine learning engineer, and cloud
-                                                    Architect
+                                                <p>I'm a software developer, ML Eng, and AWS SA
                                                     from Al-Hasa who loves programming, and competitions
                                                 </p>
                                             </div>
@@ -594,13 +593,7 @@
                                                     <li>Typescript</li>
                                                     <li>C#</li>
                                                     <li>Python</li>
-                                                    <li>SQL</li>
-                                                    <li>ASP.NET</li>
-                                                    <li>Django</li>
-                                                    <li>Node.js</li>
-                                                    <li>Angular</li>
-                                                    <li>Ionic Framework</li>
-                                                    <li>API</li>
+                                                    <li>Go</li>
                                                 </ul>
                                             </div>
                                         </div>
